--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
-/vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
+www/node_modules
+www/public/hot
+www/public/storage
+www/storage/*.key
+www/vendor
+www/.env
+www/.env.backup
+www/.phpunit.result.cache
+www/docker-compose.override.yml
+www/Homestead.json
+www/Homestead.yaml
+www/npm-debug.log
+www/yarn-error.log
+.docker
+databases
+.dockerignore
+.gitattributes
+docker-compose.yml
